# server

./: omr_circle_scanner.py  omr_web_circle_scanner.py
scanner/: DEPLOYMENT.md  DEPLOY_NOW.md  Dockerfile  FINAL_DEPLOYMENT_FIX.md  Pipfile  Procfile  QUICK_START.md  RAILWAY_DEPLOY.md  deploy.py  docker-compose.yml  environment.example  nixpacks.toml  pyproject.toml  railway.json  render.yaml  requirements.txt  start.sh  start_omr_server.bat  start_omr_server.py  start_omr_server.sh  test_8_circles.py  test_accuracy.py  test_deployment.html
scanner/results/: circle_results_20250922_023038.json
