[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omr-scanner"
version = "1.0.0"
description = "OMR Circle Scanner Web Application"
requires-python = ">=3.11"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "opencv-python==4.8.1.78",
    "numpy==1.24.3",
    "Pillow==10.0.1",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0"
]

[project.scripts]
start = "python omr_web_circle_scanner.py"
